# smart-pdf-spec

./: .env.example  .gitignore  README.md  pyproject.toml
.spec-workflow/specs/core-pdf-processing/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
config/: balanced-mode.yaml  default.yaml  fast-mode.yaml  high-fidelity-mode.yaml
requirements/: smart-pdf-scanner.md
src/smart_pdf_scanner/: __init__.py  __main__.py
src/smart_pdf_scanner/core/: __init__.py  config.py  pipeline.py
src/smart_pdf_scanner/engines/: factories.py
src/smart_pdf_scanner/engines/llm/: base.py  (+3 more)
src/smart_pdf_scanner/models/: __init__.py  config.py  document.py  elements.py  metadata.py  page.py  result.py  structure.py
src/smart_pdf_scanner/stages/: __init__.py  base.py  image_processor.py  layout_analyzer.py  markdown_generator.py  ocr_processor.py  pdf_parser.py  semantic_enhancer.py  structure_recognizer.py  table_processor.py
src/smart_pdf_scanner/utils/: __init__.py  bbox.py  cache.py  image_utils.py  logging.py  text_utils.py
src/smart_pdf_scanner/visualization/: __init__.py  colors.py  export.py  renderer.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_pipeline_stages.py
tests/performance/: test_benchmarks.py
tests/unit/test_core/: test_config_manager.py  test_pipeline.py
tests/unit/test_engines/: test_factories.py  test_layout_engines.py  test_llm_providers.py  test_ocr_engines.py
tests/unit/test_models/: test_config.py  test_element_subclasses.py  test_elements.py  test_page_document.py  test_result.py  test_structure_metadata.py
tests/unit/test_stages/: test_image_processor.py  test_layout_analyzer.py  test_markdown_generator.py  test_ocr_processor.py  test_pdf_parser.py  test_semantic_enhancer.py  test_structure_recognizer.py  test_table_processor.py
tests/unit/test_utils/: test_bbox.py  test_cache.py  test_image_utils.py  test_logging.py  test_text_utils.py
tests/unit/test_visualization/: test_colors.py  test_export.py  test_renderer.py
(+56 files in other folders)
